updated HERA integration time

--- a/ms.tex
+++ b/ms.tex
@@ -868,7 +868,7 @@ Instrument & Band & Sensitivity & $\tau$  & Resolution & $5\sigma_c$\\
  & MHz & $\mu$Jy~hr$^{1/2}$ &  hr & \arcsec\ & $\mu$Jy bm$^{-1}$ \\[0.25pc] 
 \hline\\[-0.5pc]
 GMRT       & 130-190 & 430   &  460             & 16.5 & 280 \\ 
-HERA       &  30-80  & 790   &  870             & 1030 & $2.1\times10^6$\\ 
+HERA       &  30-80  & 870   & 1900             & 1030 & $2.1\times10^6$\\ 
 LOFAR-LBA  &  30-80  & 700   & 1225             & 8.3  & 210 \\ 
 LOFAR-HBA  & 110-200 &  35   &    3             & 3.3  & 5.5 \\  
 %LWA        &  30-80  & 53000 &  3.2$\times10^6$ & 10.3 & 211 \\
@@ -907,10 +907,13 @@ the effective aperture of a dipole antenna, and that the system noise temperatur
 $T_{\rm sys}$ for LOFAR is not fully determined by the sky noise $T_{\rm sky}$, 
 we use the LOFAR Image Noise calculator\footnote{
 Heald; \url{http://www.astron.nl/~heald/test/sens.php}}, which 
-is based on SKA Memo 113\footnote{
+is based on {\it SKA Memo 113}\footnote{
 Nijboer, Pandey-Pommier, \& de Bruyn; 
 \url{http://www.skatelescope.org/uploaded/59513\_113\_Memo\_Nijboer.pdf}}, for
 our fiducial sensitivity and imaging parameters in Table~\ref{tab:sens}.
+
+The Hydrogen Epoch of Reionization Array (HERA\footnote{
+\url{http://reionization.org/}}) \ldots 
 
 The Giant Metre-wave Radio Telescope (GMRT) is an array comprising thirty 
 25-meter antennas, operating at frequencies 130-2000~MHz. The lowest
